--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <script>
 
 </script>
+<link href="styles/" rel="stylesheet"/>
+      <link href="https://fonts.googleapis.com/css"
+      family="anton|Open+Sans" rel="stylesheet">
 <head>
 
 </head>
