--- a/resort.html
+++ b/resort.html
@@ -21,7 +21,7 @@
     
           h1 {
             text-align: center;
-            color: white;
+            color: rgb(240, 240, 240);
             line-height: 100px;
             margin: 0;
           }
